--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="imgs/slide2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                     <h5>Produtos em Destaque</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <p>Confira nossos produtos em destaque: selecionados especialmente para você, com qualidade, sustentabilidade e estilo.</p>
                     <a href="#produtos-title"><button>Ver Produtos</button></a>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                 <img src="imgs/slide3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                     <h5>Promoções Principais</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                    <button>Ver Promoções</button>
+                    <p>Aproveite nossas ofertas especiais e cupons exclusivos! Fique de olho nas promoções por tempo limitado e economize nas suas compras.</p>
+                    <a href="#promocoes-title"><button>Ver Promoções</button></a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
     </div>
 
     <h2>Nossas Categorias</h2>
-    <section class="secao-categorias">
+    <section class="secao-categorias" id="categorias">
         <div class="card ctg1">
             <img src="imgs/roupa.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    <h2 id="produtos-title">Produtos em Destaque</h2>
+    <h2 class="white-title" id="produtos-title">Produtos em Destaque</h2>
     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
         <label class="btn btn-outline-primary" for="btnradio1">
@@ -120,7 +120,7 @@
         <label class="btn btn-outline-primary" for="btnradio2">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-droplet-half" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M7.21.8C7.69.295 8 0 8 0q.164.544.371 1.038c.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8m.413 1.021A31 31 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10c0 0 2.5 1.5 5 .5s5-.5 5-.5c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"/>
-  <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87z"/>
+                <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87z"/>
             </svg>
         Produtos de Beleza</label>
 
@@ -141,37 +141,195 @@
             Tecnologia Verde</label>
     </div>
     <section class="secao-produtos" id="produtos-section">
-        <div class="card roupa1">
+        <div class="card rp roupa1">
             <img src="imgs/camisetaAlgodao.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Camiseta de Algodão Orgânico</h5>
                 <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
             </div>
         </div>
-        <div class="card roupa2">
+        <div class="card rp roupa2">
             <img src="imgs/jeansReciclado.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Calça de Jeans Reciclado (Denim)</h5>
                 <a href="#" class="btn">+ Adicionar ao carrinho</a>
             </div>
         </div>
-        <div class="card roupa3">
+        <div class="card rp roupa3">
             <img src="imgs/mochilaPet.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Mochila de PET Reciclado</h5>
                 <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
             </div>
         </div>
-        <div class="card roupa4">
+        <div class="card rp roupa4">
             <img src="imgs/tenisBorracha.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Tênis de Borracha Reciclada</h5>
                 <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
             </div>
         </div>
+
+        <div class="card blz beleza1">
+            <img src="imgs/shampooEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Shampoo sólido natural</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card blz beleza2">
+            <img src="imgs/desodoranteEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Desodorante natural em creme</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card blz beleza3">
+            <img src="imgs/hidratanteEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Hidratante corporal vegano</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card blz beleza4">
+            <img src="imgs/lipbalmEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Lip balm natural</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+
+        <div class="card cs casa1">
+            <img src="imgs/escovaEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Escova de dentes de bambu</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card cs casa2">
+            <img src="imgs/esponjaEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Esponja vegetal (bucha)</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card cs casa3">
+            <img src="imgs/sacolaEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Sacolas de algodão orgânico</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card cs casa4">
+            <img src="imgs/velaEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Velas naturais de cera vegetal</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+
+        <div class="card tec tecnologia1">
+            <img src="imgs/carregadorEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Carregador solar portátil</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card tec tecnologia2">
+            <img src="imgs/ledEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Lâmpadas LED inteligentes</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card tec tecnologia3">
+            <img src="imgs/caixadesomEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Caixas de som de material reciclado</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
+        <div class="card tec tecnologia4">
+            <img src="imgs/powerbankEco.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Power bank ecológico</h5>
+                <a href="#" class="btn btn-primary">+ Adicionar ao carrinho</a>
+            </div>
+        </div>
     </section>
-    <section id="missao"></section>
-    <footer></footer>
+
+    <h2 class="white-title" id="promocoes-title">Cupons de Desconto</h2>
+    <section class="secao-promocoes">
+        <div class="card text-center cupom1">
+            <div class="card-header">
+                A partir de 01/09/2025
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">"BEM-VINDO"</h5>
+                <p class="card-text">Cupom de 5% na primeira compra.</p>
+            </div>
+            <div class="card-footer text-body-secondary">
+                Válido por 7 dias
+            </div>
+        </div>
+        <div class="card text-center cupom2">
+            <div class="card-header">
+                A partir de 05/09/2025
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">"OFERTA-ESPECIAL"</h5>
+                <p class="card-text">10% de desconto em produtos selecionados.</p>
+            </div>
+            <div class="card-footer text-body-secondary">
+                Válido por 5 dias
+            </div>
+        </div>
+        <div class="card text-center cupom3">
+            <div class="card-header">
+                A partir de 10/09/2025
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">"FRETE-GRÁTIS"</h5>
+                <p class="card-text">Cupom de frete grátis para compras acima de R$100.</p>
+            </div>
+            <div class="card-footer text-body-secondary">
+                Válido por 3 dias
+            </div>
+        </div>
+        <div class="card text-center cupom4">
+            <div class="card-header">
+                A partir de 15/09/2025
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">"DESCONTO-RELÂMPAGO"</h5>
+                <p class="card-text">15% off em toda a loja.</p>
+            </div>
+            <div class="card-footer text-body-secondary">
+                Válido por 2 dias
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+            <h3>EcoTrend</h3>
+            <p>Um e-commerce especializado em produtos sustentáveis e ecológicos, focado em promover um estilo de vida mais consciente e sustentável.</p>
+        </div>
+        <div>
+            <h4>Links Rápidos</h4>
+            <ul>
+                <li><a href="#contato">Página Inicial</a></li>
+                <li><a href="#categorias">Categorias</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </div>
+        <div id="contato">
+            <h4>Contato</h4>
+            <p>Email: ecotrend@company.com</p>
+            <p>Telefone: +55 11 99999-9999</p>
+            <p>Endereço: Rua Sustentável, 123 - São Paulo, SP
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
