Pagina Inicial Totalmente Responsiva

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <p>Categorias</p>
             <p>Produtos</p>
             <p>Contato</p>
+            <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
     </header>
