--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <img src="imgs/logo.png" alt="logo da EcoTrend">
         <ul>
-            <li><a href="index.html">Página Inicial</a></li>
-            <li><a href="#categorias">Categorias</a></li>
+            <li><a href="./index.html">Página Inicial</a></li>
+            <li><a href="./categoria.html">Categorias</a></li>
             <li><a href="#produtos-title">Produtos</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
