Refactor product cards and improve responsive styles
Product cards no longer wrap images and titles in links; instead, only the 'Ver Produto' button is clickable. Disabled products now show a disabled 'Em Breve' button. CSS was refactored to improve responsive layouts for product details and related products, including new media queries and visual enhancements for cards and buttons.

--- a/index.html
+++ b/index.html
@@ -154,150 +154,118 @@
     </div>
     <section class="secao-produtos" id="produtos-section">
         <div class="card rp roupa1">
-            <a href="products/camiseta.html">
-                <img src="imgs/camisetaAlgodao.png" class="card-img-top" alt="Camiseta de Algodão Orgânico">
-            </a>
+            <img src="imgs/camisetaAlgodao.png" class="card-img-top" alt="Camiseta de Algodão Orgânico">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/camiseta.html">Camiseta de Algodão Orgânico</a></h5>
+                <h5 class="card-title">Camiseta de Algodão Orgânico</h5>
                 <a href="products/camiseta.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card rp roupa2">
-            <a href="products/jeans.html">
-                <img src="imgs/jeansReciclado.png" class="card-img-top" alt="Calça de Jeans Reciclado">
-            </a>
+            <img src="imgs/jeansReciclado.png" class="card-img-top" alt="Calça de Jeans Reciclado">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/jeans.html">Calça de Jeans Reciclado (Denim)</a></h5>
-                <a href="products/jeans.html" class="btn">Ver Produto</a>
+                <h5 class="card-title">Calça de Jeans Reciclado (Denim)</h5>
+                <a href="products/jeans.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card rp roupa3">
-            <a href="products/mochila.html">
-                <img src="imgs/mochilaPet.png" class="card-img-top" alt="Mochila de PET Reciclado">
-            </a>
+            <img src="imgs/mochilaPet.png" class="card-img-top" alt="Mochila de PET Reciclado">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/mochila.html">Mochila de PET Reciclado</a></h5>
-                <a href="products/mochila.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Mochila de PET Reciclado</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card rp roupa4">
-            <a href="products/tenis.html">
-                <img src="imgs/tenisBorracha.png" class="card-img-top" alt="Tênis de Borracha Reciclada">
-            </a>
+            <img src="imgs/tenisBorracha.png" class="card-img-top" alt="Tênis de Borracha Reciclada">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/tenis.html">Tênis de Borracha Reciclada</a></h5>
-                <a href="products/tenis.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Tênis de Borracha Reciclada</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
 
         <div class="card blz beleza1">
-            <a href="products/shampoo.html">
-                <img src="imgs/shampooEco.png" class="card-img-top" alt="Shampoo sólido natural">
-            </a>
+            <img src="imgs/shampooEco.png" class="card-img-top" alt="Shampoo sólido natural">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/shampoo.html">Shampoo sólido natural</a></h5>
+                <h5 class="card-title">Shampoo sólido natural</h5>
                 <a href="products/shampoo.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card blz beleza2">
-            <a href="products/desodorante.html">
-                <img src="imgs/desodoranteEco.png" class="card-img-top" alt="Desodorante natural em creme">
-            </a>
+            <img src="imgs/desodoranteEco.png" class="card-img-top" alt="Desodorante natural em creme">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/desodorante.html">Desodorante natural em creme</a></h5>
-                <a href="products/desodorante.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Desodorante natural em creme</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card blz beleza3">
-            <a href="products/hidratante.html">
-                <img src="imgs/hidratanteEco.png" class="card-img-top" alt="Hidratante corporal vegano">
-            </a>
+            <img src="imgs/hidratanteEco.png" class="card-img-top" alt="Hidratante corporal vegano">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/hidratante.html">Hidratante corporal vegano</a></h5>
-                <a href="products/hidratante.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Hidratante corporal vegano</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card blz beleza4">
-            <a href="products/lipbalm.html">
-                <img src="imgs/lipbalmEco.png" class="card-img-top" alt="Lip balm natural">
-            </a>
+            <img src="imgs/lipbalmEco.png" class="card-img-top" alt="Lip balm natural">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/lipbalm.html">Lip balm natural</a></h5>
-                <a href="products/lipbalm.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Lip balm natural</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
 
         <div class="card cs casa1">
-            <a href="products/escova.html">
-                <img src="imgs/escovaEco.png" class="card-img-top" alt="Escova de dentes de bambu">
-            </a>
+            <img src="imgs/escovaEco.png" class="card-img-top" alt="Escova de dentes de bambu">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/escova.html">Escova de dentes de bambu</a></h5>
+                <h5 class="card-title">Escova de dentes de bambu</h5>
                 <a href="products/escova.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card cs casa2">
-            <a href="products/esponja.html">
-                <img src="imgs/esponjaEco.png" class="card-img-top" alt="Esponja vegetal (bucha)">
-            </a>
+            <img src="imgs/esponjaEco.png" class="card-img-top" alt="Esponja vegetal (bucha)">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/esponja.html">Esponja vegetal (bucha)</a></h5>
-                <a href="products/esponja.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Esponja vegetal (bucha)</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card cs casa3">
-            <a href="products/sacola.html">
-                <img src="imgs/sacolaEco.png" class="card-img-top" alt="Sacolas de algodão orgânico">
-            </a>
+            <img src="imgs/sacolaEco.png" class="card-img-top" alt="Sacolas de algodão orgânico">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/sacola.html">Sacolas de algodão orgânico</a></h5>
-                <a href="products/sacola.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Sacolas de algodão orgânico</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card cs casa4">
-            <a href="products/vela.html">
-                <img src="imgs/velaEco.png" class="card-img-top" alt="Velas naturais de cera vegetal">
-            </a>
+            <img src="imgs/velaEco.png" class="card-img-top" alt="Velas naturais de cera vegetal">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/vela.html">Velas naturais de cera vegetal</a></h5>
-                <a href="products/vela.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Velas naturais de cera vegetal</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
 
         <div class="card tec tecnologia1">
-            <a href="products/carregador.html">
-                <img src="imgs/carregadorEco.png" class="card-img-top" alt="Carregador solar portátil">
-            </a>
+            <img src="imgs/carregadorEco.png" class="card-img-top" alt="Carregador solar portátil">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/carregador.html">Carregador solar portátil</a></h5>
+                <h5 class="card-title">Carregador solar portátil</h5>
                 <a href="products/carregador.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card tec tecnologia2">
-            <a href="products/led.html">
-                <img src="imgs/ledEco.png" class="card-img-top" alt="Lâmpadas LED inteligentes">
-            </a>
+            <img src="imgs/ledEco.png" class="card-img-top" alt="Lâmpadas LED inteligentes">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/led.html">Lâmpadas LED inteligentes</a></h5>
-                <a href="products/led.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Lâmpadas LED inteligentes</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card tec tecnologia3">
-            <a href="products/caixasom.html">
-                <img src="imgs/caixadesomEco.png" class="card-img-top" alt="Caixas de som de material reciclado">
-            </a>
+            <img src="imgs/caixadesomEco.png" class="card-img-top" alt="Caixas de som de material reciclado">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/caixasom.html">Caixas de som de material reciclado</a></h5>
-                <a href="products/caixasom.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Caixas de som de material reciclado</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card tec tecnologia4">
-            <a href="products/powerbank.html">
-                <img src="imgs/powerbankEco.png" class="card-img-top" alt="Power bank ecológico">
-            </a>
+            <img src="imgs/powerbankEco.png" class="card-img-top" alt="Power bank ecológico">
             <div class="card-body">
-                <h5 class="card-title"><a href="products/powerbank.html">Power bank ecológico</a></h5>
-                <a href="products/powerbank.html" class="btn btn-primary">Ver Produto</a>
+                <h5 class="card-title">Power bank ecológico</h5>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
