--- a/products/carregador.html
+++ b/products/carregador.html
@@ -71,33 +71,27 @@
     <h2>Produtos Relacionados</h2>
     <section class="secao-produtos">
         <div class="card tec tecnologia2">
-            <a href="led.html">
-                <img src="../imgs/ledEco.png" class="card-img-top" alt="LED Ecológico">
-            </a>
+            <img src="../imgs/ledEco.png" class="card-img-top" alt="LED Ecológico">
             <div class="card-body">
-                <h5><a href="led.html">LED Ecológico</a></h5>
+                <h5>LED Ecológico</h5>
                 <p>R$ 49,90</p>
-                <a href="led.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card tec tecnologia3">
-            <a href="caixasom.html">
-                <img src="../imgs/caixadesomEco.png" class="card-img-top" alt="Caixa de Som Ecológica">
-            </a>
+            <img src="../imgs/caixadesomEco.png" class="card-img-top" alt="Caixa de Som Ecológica">
             <div class="card-body">
-                <h5><a href="caixasom.html">Caixa de Som Ecológica</a></h5>
+                <h5>Caixa de Som Ecológica</h5>
                 <p>R$ 129,90</p>
-                <a href="caixasom.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card tec tecnologia4">
-            <a href="powerbank.html">
-                <img src="../imgs/powerbankEco.png" class="card-img-top" alt="Power Bank Ecológico">
-            </a>
+            <img src="../imgs/powerbankEco.png" class="card-img-top" alt="Power Bank Ecológico">
             <div class="card-body">
-                <h5><a href="powerbank.html">Power Bank Ecológico</a></h5>
+                <h5>Power Bank Ecológico</h5>
                 <p>R$ 89,90</p>
-                <a href="powerbank.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
