--- a/products/escova.html
+++ b/products/escova.html
@@ -71,33 +71,27 @@
     <h2>Produtos Relacionados</h2>
     <section class="secao-produtos">
         <div class="card cs casa2">
-            <a href="esponja.html">
-                <img src="../imgs/esponjaEco.png" class="card-img-top" alt="Esponja Ecológica">
-            </a>
+            <img src="../imgs/esponjaEco.png" class="card-img-top" alt="Esponja Ecológica">
             <div class="card-body">
-                <h5><a href="esponja.html">Esponja Ecológica</a></h5>
+                <h5>Esponja Ecológica</h5>
                 <p>R$ 15,90</p>
-                <a href="esponja.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card cs casa3">
-            <a href="sacola.html">
-                <img src="../imgs/sacolaEco.png" class="card-img-top" alt="Sacola Ecológica">
-            </a>
+            <img src="../imgs/sacolaEco.png" class="card-img-top" alt="Sacola Ecológica">
             <div class="card-body">
-                <h5><a href="sacola.html">Sacola Ecológica</a></h5>
+                <h5>Sacola Ecológica</h5>
                 <p>R$ 29,90</p>
-                <a href="sacola.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card cs casa4">
-            <a href="vela.html">
-                <img src="../imgs/velaEco.png" class="card-img-top" alt="Vela Ecológica">
-            </a>
+            <img src="../imgs/velaEco.png" class="card-img-top" alt="Vela Ecológica">
             <div class="card-body">
-                <h5><a href="vela.html">Vela Ecológica</a></h5>
+                <h5>Vela Ecológica</h5>
                 <p>R$ 35,90</p>
-                <a href="vela.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
