--- a/products/jeans.html
+++ b/products/jeans.html
@@ -71,33 +71,27 @@
     <h2>Produtos Relacionados</h2>
     <section class="secao-produtos">
         <div class="card rp roupa1">
-            <a href="camiseta.html">
-                <img src="../imgs/camisetaAlgodao.png" class="card-img-top" alt="Camiseta de Algodão Orgânico">
-            </a>
+            <img src="../imgs/camisetaAlgodao.png" class="card-img-top" alt="Camiseta de Algodão Orgânico">
             <div class="card-body">
-                <h5><a href="camiseta.html">Camiseta Algodão Orgânico</a></h5>
+                <h5>Camiseta Algodão Orgânico</h5>
                 <p>R$ 89,90</p>
-                <a href="camiseta.html" class="btn">Ver Produto</a>
+                <a href="camiseta.html" class="btn btn-primary">Ver Produto</a>
             </div>
         </div>
         <div class="card rp roupa3">
-            <a href="mochila.html">
-                <img src="../imgs/mochilaPet.png" class="card-img-top" alt="Mochila de PET Reciclado">
-            </a>
+            <img src="../imgs/mochilaPet.png" class="card-img-top" alt="Mochila de PET Reciclado">
             <div class="card-body">
-                <h5><a href="mochila.html">Mochila PET Reciclado</a></h5>
+                <h5>Mochila PET Reciclado</h5>
                 <p>R$ 129,90</p>
-                <a href="mochila.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card rp roupa4">
-            <a href="tenis.html">
-                <img src="../imgs/tenisBorracha.png" class="card-img-top" alt="Tênis de Borracha Reciclada">
-            </a>
+            <img src="../imgs/tenisBorracha.png" class="card-img-top" alt="Tênis de Borracha Reciclada">
             <div class="card-body">
-                <h5><a href="tenis.html">Tênis Borracha Reciclada</a></h5>
+                <h5>Tênis Borracha Reciclada</h5>
                 <p>R$ 199,90</p>
-                <a href="tenis.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
