--- a/products/shampoo.html
+++ b/products/shampoo.html
@@ -71,33 +71,27 @@
     <h2>Produtos Relacionados</h2>
     <section class="secao-produtos">
         <div class="card blz beleza2">
-            <a href="desodorante.html">
-                <img src="../imgs/desodoranteEco.png" class="card-img-top" alt="Desodorante Ecológico">
-            </a>
+            <img src="../imgs/desodoranteEco.png" class="card-img-top" alt="Desodorante Ecológico">
             <div class="card-body">
-                <h5><a href="desodorante.html">Desodorante Ecológico</a></h5>
+                <h5>Desodorante Ecológico</h5>
                 <p>R$ 28,90</p>
-                <a href="desodorante.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card blz beleza3">
-            <a href="hidratante.html">
-                <img src="../imgs/hidratanteEco.png" class="card-img-top" alt="Hidratante Ecológico">
-            </a>
+            <img src="../imgs/hidratanteEco.png" class="card-img-top" alt="Hidratante Ecológico">
             <div class="card-body">
-                <h5><a href="hidratante.html">Hidratante Ecológico</a></h5>
+                <h5>Hidratante Ecológico</h5>
                 <p>R$ 39,90</p>
-                <a href="hidratante.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
         <div class="card blz beleza4">
-            <a href="lipbalm.html">
-                <img src="../imgs/lipbalmEco.png" class="card-img-top" alt="Lip Balm Ecológico">
-            </a>
+            <img src="../imgs/lipbalmEco.png" class="card-img-top" alt="Lip Balm Ecológico">
             <div class="card-body">
-                <h5><a href="lipbalm.html">Lip Balm Ecológico</a></h5>
+                <h5>Lip Balm Ecológico</h5>
                 <p>R$ 19,90</p>
-                <a href="lipbalm.html" class="btn">Ver Produto</a>
+                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
