--- a/contato/contato.html
+++ b/contato/contato.html
@@ -11,14 +11,20 @@
 </head>
 <body>
     <div class="main-container">
-        <header class="header">
-            <div class="container">
-                <h1><i class="fas fa-envelope me-3"></i>Entre em Contato</h1>
-                <p>Entre em contato conosco e faça parte dessa tendência sustentável.</p>
-            </div>
-        </header>
+       <header>
+        <img src="imgs/logo.png" alt="logo da EcoTrend">
+        <ul>
+            <li><a href="./index.html">Página Inicial</a></li>
+            <li><a href="./categoria.html">Categorias</a></li>
+            <li><a href="#produtos-title">Produtos</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
 
-         
+        <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+        </svg>
+    </header>
+
         <main class="content-grid">
            
             <div class="contact-form">
