--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="./index.html">Página Inicial</a></li>
             <li><a href="./categoria.html">Categorias</a></li>
             <li><a href="#produtos-title">Produtos</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="./contato.html">Contato</a></li>
         </ul>
 
         <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
