Corrigindo o footer do arquivo contato.html

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -117,108 +117,26 @@
                 </div>
             </div>
         </main>
-
-          
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-content">
-                    <div class="footer-section">
-                        <h4><i class="fas fa-share-alt me-2"></i>Redes Sociais</h4>
-                        <div class="social-links">
-                            <a href="#" title="Facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#" title="Instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#" title="Twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" title="LinkedIn">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                            <a href="#" title="YouTube">
-                                <i class="fab fa-youtube"></i>
-                            </a>
-                            <a href="#" title="WhatsApp">
-                                <i class="fab fa-whatsapp"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4><i class="fas fa-phone me-2"></i>Contato</h4>
-                        <ul>
-                            <li>
-                                <a href="tel:+5511123456789">
-                                    <i class="fas fa-phone"></i>
-                                    (11) 1234-5678
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:contato@empresa.com.br">
-                                    <i class="fas fa-envelope"></i>
-                                   contato-ecotrend@gmail.com.br
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    Localização
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-headset"></i>
-                                    Suporte Online
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-section">
-                        <h4><i class="fas fa-store me-2"></i>Políticas da Loja</h4>
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-shield-alt"></i>
-                                    Política de Privacidade
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-file-contract"></i>
-                                    Termos de Uso
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-undo"></i>
-                                    Política de Devolução
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-truck"></i>
-                                    Política de Entrega
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fas fa-credit-card"></i>
-                                    Formas de Pagamento
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="footer-bottom">
-                    <p>&copy; 2024 Eco Trend. Todos os direitos reservados.</p>
-                    <p>Eco Trend – Inovação sustentável para um futuro melhor. Porque a verdadeira tendência é cuidar do planeta.</p>
-                </div>
-            </div>
-        </footer>
     </div>
+    <footer>
+        <div>
+            <h3>EcoTrend</h3>
+            <p>Um e-commerce especializado em produtos sustentáveis e ecológicos, focado em promover um estilo de vida mais consciente e sustentável.</p>
+        </div>
+        <div>
+            <h4>Links Rápidos</h4>
+            <ul>
+                <li><a href="#contato">Página Inicial</a></li>
+                <li><a href="#categorias">Categorias</a></li>
+                <li><a href="#produtos">Produtos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </div>
+        <div id="contato">
+            <h4>Contato</h4>
+            <p>Email: ecotrend@company.com</p>
+            <p>Telefone: +55 11 99999-9999</p>
+            <p>Endereço: Rua Sustentável, 123 - São Paulo, SP
+    </footer>
 </body>
 </html>
