--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <div id="menu-lista-mobile">
             <h1>Menu</h1>
-            <p>Página inicial</p>
-            <p>Categorias</p>
-            <p>Produtos</p>
-            <p>Contato</p>
+            <a href="./index.html"><p>Página inicial</p></a>
+            <a href="./pages/categoria.html"><p>Categorias</p></a>
+            <a href="index.html#produtos-title"><p>Produtos</p></a>
+            <a href="./pages/contato.html"><p>Contato</p></a>
             <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
@@ -52,7 +52,7 @@
                 <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
                     <h5>E-commerce EcoTrend</h5>
                     <p>Um e-commerce especializado em produtos sustentáveis e ecológicos, focado em promover um estilo de vida mais consciente e sustentável.</p>
-                    <button>Entre em contato conosco</button>
+                    <a href="./pages/contato.html"><button>Entre em contato conosco</button></a>
                 </div>
             </div>
             <div class="carousel-item">
