--- a/pages/categoria.html
+++ b/pages/categoria.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="../index.html">Página Inicial</a></li>
             <li><a href="./categoria.html">Categorias</a></li>
-            <li><a href="#produtos-title">Produtos</a></li>
+            <li><a href="../index.html#produtos-title">Produtos</a></li>
             <li><a href="./contato.html">Contato</a></li>
         </ul>
 
@@ -35,10 +35,11 @@
 
         <div id="menu-lista-mobile">
             <h1>Menu</h1>
-            <p>Página inicial</p>
-            <p>Categorias</p>
-            <p>Produtos</p>
-            <p>Contato</p>
+            <a href="../index.html"><p>Página inicial</p></a>
+            <a href="./pages/categoria.html"><p>Categorias</p></a>
+            <a href="../index.html#produtos-title"><p>Produtos</p></a>
+            <a href="./pages/contato.html"><p>Contato</p></a>
+            <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
     </header>
@@ -460,8 +461,7 @@
             </div>
         </div>
     </div>
-    <!-- Footer -->
-    <footer class="container-fluid">
+    <footer>
         <div>
             <h3>EcoTrend</h3>
             <p>Um e-commerce especializado em produtos sustentáveis e ecológicos, focado em promover um estilo de vida mais consciente e sustentável.</p>
