--- a/products/camiseta.html
+++ b/products/camiseta.html
@@ -12,9 +12,9 @@
         <img src="../imgs/logo.png" alt="logo da EcoTrend">
         <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="../pages/categoria.html">Categorias</a></li>
-            <li><a href="#produtos-title">Produtos</a></li>
-            <li><a href="../pages/contato.html">Contato</a></li>
+            <li><a href="../index.html#categorias">Categorias</a></li>
+            <li><a href="../index.html#produtos-title">Produtos</a></li>
+            <li><a href="../index.html#contato">Contato</a></li>
         </ul>
 
         <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
@@ -30,10 +30,10 @@
 
         <div id="menu-lista-mobile">
             <h1>Menu</h1>
-            <p><a href="../index.html">Página inicial</a></p>
-            <p><a href="../index.html#categorias">Categorias</a></p>
-            <p><a href="../index.html#produtos-title">Produtos</a></p>
-            <p><a href="../index.html#contato">Contato</a></p>
+            <a href="../index.html"><p>Página inicial</p></a>
+            <a href="../pages/categoria.html"><p>Categorias</p></a>
+            <a href="../index.html#produtos-title"><p>Produtos</p></a>
+            <a href="../pages/contato.html"><p>Contato</p></a>
             <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
@@ -76,22 +76,6 @@
                 <h5>Jeans Reciclado</h5>
                 <p>R$ 149,90</p>
                 <a href="jeans.html" class="btn btn-primary">Ver Produto</a>
-            </div>
-        </div>
-        <div class="card rp roupa3">
-            <img src="../imgs/mochilaPet.png" class="card-img-top" alt="Mochila de PET Reciclado">
-            <div class="card-body">
-                <h5>Mochila PET Reciclado</h5>
-                <p>R$ 129,90</p>
-                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
-            </div>
-        </div>
-        <div class="card rp roupa4">
-            <img src="../imgs/tenisBorracha.png" class="card-img-top" alt="Tênis de Borracha Reciclada">
-            <div class="card-body">
-                <h5>Tênis Borracha Reciclada</h5>
-                <p>R$ 199,90</p>
-                <button class="btn btn-secondary disabled" disabled>Em Breve</button>
             </div>
         </div>
     </section>
