--- a/pages/contato.html
+++ b/pages/contato.html
@@ -3,27 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Entre em Contato Conosco</title>
+    <title>Contato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="../css/contato.css" rel="stylesheet">
-    
+    <link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="main-container">
-       <header>
-            <img src="../imgs/logo.png" alt="logo da EcoTrend">
-            <ul>
-                <li><a href="../index.html">Página Inicial</a></li>
-                <li><a href="./categoria.html">Categorias</a></li>
-                <li><a href="#produtos-title">Produtos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
+    <header>
+        <img src="../imgs/logo.png" alt="logo da EcoTrend">
+        <ul>
+            <li><a href="../index.html">Página Inicial</a></li>
+            <li><a href="./categoria.html">Categorias</a></li>
+            <li><a href="../index.html#produtos-title">Produtos</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+        </ul>
 
-            <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+        <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+        </svg>
+
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" id="menu-mobile">
+            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
             </svg>
-        </header>
+        </label>
+
+        <div id="menu-lista-mobile">
+            <h1>Menu</h1>
+            <a href="../index.html"><p>Página inicial</p></a>
+            <a href="./pages/categoria.html"><p>Categorias</p></a>
+            <a href="../index.html#produtos-title"><p>Produtos</p></a>
+            <a href="./pages/contato.html"><p>Contato</p></a>
+            <p>Carrinho</p>
+            <label for="menu-toggle"><p>X</p></label>
+        </div>
+    </header>
+    <div class="main-container">
 
         <main class="content-grid">
            
@@ -117,7 +134,7 @@
                 </div>
             </div>
         </main>
-    </div>
+
     <footer>
         <div>
             <h3>EcoTrend</h3>
@@ -138,5 +155,6 @@
             <p>Telefone: +55 11 99999-9999</p>
             <p>Endereço: Rua Sustentável, 123 - São Paulo, SP
     </footer>
+    </div>
 </body>
 </html>
