--- a/products/escova.html
+++ b/products/escova.html
@@ -12,9 +12,9 @@
         <img src="../imgs/logo.png" alt="logo da EcoTrend">
         <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="../pages/categoria.html">Categorias</a></li>
-            <li><a href="#produtos-title">Produtos</a></li>
-            <li><a href="../pages/contato.html">Contato</a></li>
+            <li><a href="../index.html#categorias">Categorias</a></li>
+            <li><a href="../index.html#produtos-title">Produtos</a></li>
+            <li><a href="../index.html#contato">Contato</a></li>
         </ul>
 
         <svg id="carrinho" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
@@ -30,10 +30,10 @@
 
         <div id="menu-lista-mobile">
             <h1>Menu</h1>
-            <p><a href="../index.html">Página inicial</a></p>
-            <p><a href="../index.html#categorias">Categorias</a></p>
-            <p><a href="../index.html#produtos-title">Produtos</a></p>
-            <p><a href="../index.html#contato">Contato</a></p>
+            <a href="../index.html"><p>Página inicial</p></a>
+            <a href="../pages/categoria.html"><p>Categorias</p></a>
+            <a href="../index.html#produtos-title"><p>Produtos</p></a>
+            <a href="../pages/contato.html"><p>Contato</p></a>
             <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
