--- a/pages/categoria.html
+++ b/pages/categoria.html
@@ -36,9 +36,9 @@
         <div id="menu-lista-mobile">
             <h1>Menu</h1>
             <a href="../index.html"><p>Página inicial</p></a>
-            <a href="./pages/categoria.html"><p>Categorias</p></a>
+            <a href="./categoria.html"><p>Categorias</p></a>
             <a href="../index.html#produtos-title"><p>Produtos</p></a>
-            <a href="./pages/contato.html"><p>Contato</p></a>
+            <a href="./contato.html"><p>Contato</p></a>
             <p>Carrinho</p>
             <label for="menu-toggle"><p>X</p></label>
         </div>
